syntax = "proto3";

import "google/protobuf/empty.proto";
option java_multiple_files = true;


option java_package = "org.example.station3_productregistration.grpc";
option java_outer_classname = "ProductRegistrationProto";

message Product {
  int32 product_id = 1;
  string product_type = 2;
}

message ProductTrays {
  int32 product_id = 1;
  int32 tray_id = 2;
}

message DistributionOrder {
  int32 order_id = 1;
  string customer_details = 2;
  string shipping_date = 3;
  bool recall_status = 4;
}

message OrderProducts {
  int32 order_id = 1;
  int32 product_id = 2;
}

// Requests and Responses
message RegisterProductRequest {
  int32 product_id = 1;
  string product_type = 2;
}

message GetProductByIdRequest {
  int32 product_id = 1;
}

message GetProductByIdResponse {
  Product product = 1;
}

message GetAllProductTraysResponse {
  repeated ProductTrays trays = 1;
}

message GetAllProductTypesResponse {
  repeated string product_types = 1;
}

message CreateOrderRequest {
  int32 order_id = 1;
  int32 product_id = 2;
}

message GetOrderByIdRequest {
  int32 order_id = 1;
}

message GetOrderByIdResponse {
  OrderProducts order_products = 1;
}

message CreateDistributionOrderRequest {
  int32 order_id = 1;
  string customer_details = 2;
  string shipping_date = 3;
}

message GetDistributionOrderByIdRequest {
  int32 order_id = 1;
}

message GetDistributionOrderByIdResponse {
  DistributionOrder distribution_order = 1;
}

service ProductRegistrationService {
  rpc RegisterProduct (RegisterProductRequest) returns (google.protobuf.Empty);
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
  rpc GetAllProductTrays (google.protobuf.Empty) returns (GetAllProductTraysResponse);
  rpc GetAllProductTypes (google.protobuf.Empty) returns (GetAllProductTypesResponse);
  rpc CreateOrder (CreateOrderRequest) returns (google.protobuf.Empty);
  rpc GetOrderById (GetOrderByIdRequest) returns (GetOrderByIdResponse);
  rpc CreateDistributionOrder (CreateDistributionOrderRequest) returns (google.protobuf.Empty);
  rpc GetDistributionOrderById (GetDistributionOrderByIdRequest) returns (GetDistributionOrderByIdResponse);
}
